--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!doctype html>
-<html>
+<html  lang="fr">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Application test receptacle</title>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-        <link rel="stylesheet" href="styles.css" />
-        <link>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="container-fluid" id="map"> 
-            <button type="button" id="geolocate">Géolocaliser</button>
-     
-        </div>
-        <div class="container-fluid" id="form">  
+        <!--navbar fixe-->
+        <header class="text-xl font-extrabold h-1/6 p-3">
+            Dashbord gestion des réceptacles
+            <button class="text-base font-bold border-2 border-rose-600 rounded-r-lg" id="monBouton">Dashbord</button>
+        </header>
+        <!--Zone affichage-->
+        <div class="flex flex-row" id="appli">
+            <!--sidebar fixe-->
+            <div class="flex-grow-h-14 bg-teal-600 w-1/6 p-3 " id="side_fixe"> 
+                <label class="inline-flex items-center mb-5 cursor-pointer">
+                    <input type="checkbox" value="" class="sr-only peer">
+                    <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
+                    <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">Small toggle</span>
+                </label>
+            </div>
+            <!--sidebar flottante-->
+            <div class="collapse basis-1/4 bg-slate-800 text-gray-50 p-3" id="side_flottante"> Flottante</div>
+            <!--Carte-->
+            <div class="flex-grow-1" id="map"></div>
+             
         </div>
         <script src="script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" integrity="sha512-+k1pnlgt4F1H8L7t3z95o3/KO+o78INEcXTbnoJQ/F2VqDVhWoaiVml/OEHv9HsVgxUaVW+IbiZPUJQfF/YxZw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
